--- a/admin-page/views/user/userDetail.ejs
+++ b/admin-page/views/user/userDetail.ejs
@@ -29,7 +29,7 @@
                 <img class="profile-user-img img-responsive img-circle" src="<%= user.avatar %>"
                   alt="User profile picture">
 
-                <h3 class="profile-username text-center"><%= user.fullName %></h3>
+                <h2 class="profile-username text-center"><b><%= user.fullName %></b></h2>
 
                 <p class="text-center" style="font-size: 20px;"><span class="label label-primary"><%= user.role %></span></p>
 
