--- a/admin-page/views/common/dialogs.ejs
+++ b/admin-page/views/common/dialogs.ejs
@@ -1,3 +1,8 @@
+<div id="dlgloading" class="modal fade" role="dialog">
+    <div class="modal-dialog" style="padding-top: 5%;">
+        <div class="loader"></div>
+    </div>
+</div>
 
 <!-- ############################### USER ACCOUNT SECTION ###############################-->
 <div id="dlginsertuser" class="modal fade" role="dialog">
@@ -146,13 +151,13 @@
                         <input type="text" class="form-control" id="username" name="username" readonly required>
                     </div>
                     <div class="form-group" style="display: none">
-                            <input type="text" class="form-control" id="password" name="password" readonly required>
-                        </div>
+                        <input type="text" class="form-control" id="password" name="password" readonly required>
+                    </div>
                     <div class="form-group">
                         <label for="id" class="control-label">Cấp Độ:</label>
                         <input type="text" class="form-control" id="role" name="role" readonly required>
                     </div>
-                
+
                     <div class="form-group">
                         <label for="fullname" class="control-label">Họ Và Tên:</label>
                         <input type="text" class="form-control" id="fullName" name="fullName">
@@ -185,8 +190,8 @@
                     </div>
 
 
-                    <button type="submit" onclick="handleUpdateUserDetail(); return false;" 
-                    class="btn btn-info">Cập Nhật</button>
+                    <button type="submit" onclick="handleUpdateUserDetail(); return false;" class="btn btn-info">Cập
+                        Nhật</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                 </form>
             </div>
@@ -238,7 +243,7 @@
 
 <!-- Global message box -->
 <div id="popup_message_box" style="display: none;">
-        <div id="popup_message_box_dim" style="
+    <div id="popup_message_box_dim" style="
              background: none repeat scroll 0 0 rgba(0, 0, 0, 0.1);
              position: absolute;
              top: 0px; left: 0px;
@@ -246,28 +251,30 @@
              width: 100%;
              overflow: auto;
              z-index: 9998;">
-        </div>
+    </div>
 
-        <div  style="width: 300px; position: fixed;top: 50%;left: 50%;transform: translate(-50%, -50%);z-index: 9999;">
-            <div id="popup_message_panel" class="panel panel-default">
-                <div class="panel-heading" style="height: 30pt">
-                    <h3 class="panel-title" id="msg_header" style="float: left;">Thông báo</h3>
-                   <span style="float: right;">
-                        <a id="popup_message_box_close" data-placement="bottom" title="" rel="tooltip" class="button-icon jarviswidget-delete-btn" href="javascript:void(0);" data-original-title="Delete">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </a>
-                    </span>
-                    <span style="clear: both"></span>
-                </div>
-                <div class="panel-body">
-                    <p  style="text-align: left;" id="popup_message_box_content">...</p>
-                </div>
+    <div style="width: 300px; position: fixed;top: 50%;left: 50%;transform: translate(-50%, -50%);z-index: 9999;">
+        <div id="popup_message_panel" class="panel panel-default">
+            <div class="panel-heading" style="height: 30pt">
+                <h3 class="panel-title" id="msg_header" style="float: left;">Thông báo</h3>
+                <span style="float: right;">
+                    <a id="popup_message_box_close" data-placement="bottom" title="" rel="tooltip"
+                        class="button-icon jarviswidget-delete-btn" href="javascript:void(0);"
+                        data-original-title="Delete">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </a>
+                </span>
+                <span style="clear: both"></span>
+            </div>
+            <div class="panel-body">
+                <p style="text-align: left;" id="popup_message_box_content">...</p>
             </div>
         </div>
     </div>
+</div>
 
-    <div id="popup_confirm_message_box" style="display: none;">
-        <div id="popup_confirm_message_box_dim" style="
+<div id="popup_confirm_message_box" style="display: none;">
+    <div id="popup_confirm_message_box_dim" style="
              background: none repeat scroll 0 0 rgba(0, 0, 0, 0.1);
              position: absolute;
              top: 0px; left: 0px;
@@ -275,25 +282,28 @@
              width: 100%;
              overflow: auto;
              z-index: 9998;"></div>
-        <div  style="width: 300px; position: fixed;top: 50%;left: 50%;transform: translate(-50%, -50%);z-index: 9999;">
+    <div style="width: 300px; position: fixed;top: 50%;left: 50%;transform: translate(-50%, -50%);z-index: 9999;">
 
-            <div id="popup_confirm_message_panel" class="panel panel-default">
-                <div class="modal-header" style="height: 30pt">
-                    <h3 class="panel-title" id="msg_header" style="float: left;">Thông báo</h3>
-                    <span style="float: right;">
-                        <a id="popup_confirm_message_box_close" data-placement="bottom" title="" rel="tooltip" class="button-icon jarviswidget-delete-btn" href="javascript:void(0);" data-original-title="Delete">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </a>
-                    </span>
-                    <span style="clear: both"></span>
-                </div>
-                <div class="modal-body">
-                    <p  style="text-align: left;" id="popup_confirm_message_box_content">...</p>
-                </div>
-                <div class="modal-footer">
-                    <button id="confirm-btn-cancel" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <a id="confirm-btn" class="btn btn-danger btn-ok">Delete</a>
-                </div>
+        <div id="popup_confirm_message_panel" class="panel panel-default">
+            <div class="modal-header" style="height: 30pt">
+                <h3 class="panel-title" id="msg_header" style="float: left;">Thông báo</h3>
+                <span style="float: right;">
+                    <a id="popup_confirm_message_box_close" data-placement="bottom" title="" rel="tooltip"
+                        class="button-icon jarviswidget-delete-btn" href="javascript:void(0);"
+                        data-original-title="Delete">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </a>
+                </span>
+                <span style="clear: both"></span>
+            </div>
+            <div class="modal-body">
+                <p style="text-align: left;" id="popup_confirm_message_box_content">...</p>
+            </div>
+            <div class="modal-footer">
+                <button id="confirm-btn-cancel" type="button" class="btn btn-default"
+                    data-dismiss="modal">Cancel</button>
+                <a id="confirm-btn" class="btn btn-danger btn-ok">Delete</a>
             </div>
         </div>
     </div>
+</div>
