--- a/admin-page/views/common/header.ejs
+++ b/admin-page/views/common/header.ejs
@@ -41,7 +41,7 @@
               <li class="user-footer">
                 <div class="pull-left">
                     <a href="#" class="btn btn-sm btn-danger" data-toggle="modal"
-                    data-target="#dlgchangepassword" onclick="$('#dlgchangepassword input[name=\'username\']').val('<%= user.username %>');">Đổi Mật Khẩu</a>
+                    data-target="#dlgchangepassword" onclick="showPopupChangePassword(globalUser);">Đổi Mật Khẩu</a>
                 </div>
                 <div class="pull-right">
                   <a href="/logout" class="btn btn-default btn-flat">Đăng Xuất</a>
