--- a/admin-page/views/user/user.ejs
+++ b/admin-page/views/user/user.ejs
@@ -31,6 +31,8 @@
                         <th>Tên Đăng Nhập</th>
                         <th>Họ Và Tên</th>
                         <th>Cấp Độ</th>
+                        <th>Email</th>
+                        <th>Ngày Sinh</th>
                         <th>Địa Chỉ</th>
                         <th>Số Điện Thoại</th>
                         <th>Lần Đăng Nhập Cuối</th>
