remove constraint when register

--- a/main-page/views/user/register_account.ejs
+++ b/main-page/views/user/register_account.ejs
@@ -63,11 +63,11 @@
           //console.log("abc")
         var email = document.getElementById('username').value;
         var password = document.getElementById('password').value;
-        if (email.length < 8) {
+        if (email.length==0) {
           alert('Please enter an email address.');
           return false;
         }
-        if (password.length < 8) {
+        if (password.length==0) {
           alert('Please enter a password.');
           return false;
         }
