Fix bug crash app when verify email because of firebase.auth().onAuthStateChange()

--- a/main-page/views/layout.ejs
+++ b/main-page/views/layout.ejs
@@ -188,7 +188,7 @@
           <div class="modal-body">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h4>Đăng nhập/Đăng kí</h4>
-            <form class="aa-login-form" action="user/login" method="POST">
+            <form class="aa-login-form" action="/user/login" method="POST">
               <label for="">Tài khoản hoặc Email<span>*</span></label>
               <input type="text" name="username" placeholder="Username or email">
               <label for="">Mật khẩu<span>*</span></label>
