--- a/main-page/views/home/homepage.ejs
+++ b/main-page/views/home/homepage.ejs
@@ -177,7 +177,11 @@
       <% include quickviewmodal %>
       <% include support %>
 </body>
+<script src="/js/sequence.js"></script>
+<script src="/js/sequence-theme.modern-slide-in.js"></script>  
 <script>
+    <!-- To Slider JS -->
+   
   function clickSearch(linkimg,linkP)
     {
         document.getElementsByClassName("simpleLens-lens-image")[0].src=linkimg;
