[admin-page] add customer CRUD

--- a/admin-page/views/common/script.ejs
+++ b/admin-page/views/common/script.ejs
@@ -24,6 +24,7 @@
 <script src="handlers/userAccountHandler.js"></script>
 <script src="handlers/categoryHandler.js"></script>
 <script src="handlers/userDetailHandler.js"></script>
+<script src="handlers/customerHandler.js"></script>
 <script src="handlers/utils.js"></script>
 
 <!-- wrap word in datatable cell -->
