--- a/admin-page/views/common/sidebar.ejs
+++ b/admin-page/views/common/sidebar.ejs
@@ -70,13 +70,16 @@
         </a>
         <ul class="treeview-menu">
 
-          <li>
-            <a href="/user"><i class="fa fa-users"></i> Người Dùng
+          <li class="treeview">
+            <a href="#"><i class="fa fa-users"></i> Người Dùng
               <span class="pull-right-container">
-
+                <i class="fa fa-angle-left pull-right"></i>
               </span>
             </a>
-
+            <ul class="treeview-menu">
+              <li><a href="/user"><i class="fa fa-user"></i>Quản Trị Viên</a></li>
+              <li><a href="/customer"><i class="fa fa-user"></i>Khách Hàng</a></li>
+            </ul>
           </li>
           <li class="treeview">
             <a href="#"><i class="fa fa-shopping-cart"></i> Cửa Hàng
