[admin-page] add upload product image to firebase

--- a/admin-page/views/common/dialogs.ejs
+++ b/admin-page/views/common/dialogs.ejs
@@ -1,5 +1,5 @@
 <div id="dlgloading" class="modal fade" role="dialog">
-    <div class="modal-dialog" style="padding-top: 5%;">
+    <div class="modal-dialog" style="padding-top: 5%">
         <div class="loader"></div>
     </div>
 </div>
